--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ Version: 1
     transform: translate(0px, 0px);
 }
 h2, h4 {
-    font-family: Raleway-Bold;
+    font-family: ProximaNova-Reg;
 }
 .fa-lg {
     font-size: 1.33333em;
@@ -1725,7 +1725,7 @@ figure, sub, sup {
     content: "";
 }
 html {
-    font-family: sans-serif;
+    font-family: ProximaNova-Reg;
 }
 body {
     margin: 0;
@@ -1840,6 +1840,12 @@ table {
 	url("./../fonts/Raleway-Regular.woff") format("woff"), 
 	url("./../fonts/Raleway-Regular.ttf") format("truetype"), 
 	url("./../fonts/Raleway-Regular.svg#Raleway-Regular") format("svg");
+}
+
+
+@font-face {
+    font-family: "ProximaNova-Reg";
+    src: url("./../fonts/ProximaNova-Reg.ttf") format("truetype")
 }
 @font-face {
     font-family: "Raleway-Bold";
@@ -2247,7 +2253,7 @@ figure.embed {
 body {
     background: #000 url("images/bg_body.png") no-repeat scroll center top / cover ;
     color: #282828;
-    font-family: Raleway-Regular;
+    font-family: ProximaNova-Reg;
     font-size: 14px;
 }
 #wrapper {
